--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "prettier": "3.0.3"
   }
 }
