--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index",
-    "start:production": "node index"
+    "start:production": "node index",
+    "formate": "npx prettier . --write"
   },
   "keywords": [],
   "author": "",
