--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,11 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
-  ]
+  ],
+  "functions": {
+      "api/*.js": {
+          "memory": 3009,
+          "maxDuration": 60
+    }
+  }
 }
