--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,10 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
-  ]
+  ],
+   "functions": {
+     "./**/*.js": {
+      "maxDuration": 30
+    }
+  }
 }
