--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,8 @@
       "dest": "index.js"
     }
   ],
-   "functions": {
-     "index.js": {
+ "functions": {
+     "./index.js": {
       "maxDuration": 30
     }
   }
